src/App.css
* {
  box-sizing: border-box;
}

body, h2, p {
  margin: 0;
  padding: 0;
}

body {
  background-color: blueviolet;
  padding: 0em 1em;
}

header {
  padding-top: 2em;
}

header img {
  width: 10%;
}

main {
  margin-top: 2em;
  display: flex;
  justify-content: space-between;
}

main img {
  width: 50%;
}

.content {
  width: 40%;
  color: white;
  padding-top: 2em;
}
.content h2 {
  font-size: 45px;
}
.content p {
  margin: 2em 0em;
  font-size: 15px;
}
main button {
  padding: 1.5em;
  border: none;
  border-radius: 30px;
  color: purple;
  width: 40%;
}

footer {
  padding: 2em;
  width: 100vw;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
}

footer i {
  color: white;
  margin: 12px;
  font-size: 32px;
}

@media screen and (max-width: 800px) {
  header img {
    padding-left: 15%;
    width: 40%;
  }
  main {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  main img {
    width: 70%;
  }
  .content {
    width: 70%;
  }
  footer {
    padding: 4em 15%;
    justify-content: flex-start;
  }
}

